--- a/Common/ApplicationLogic/VisualCrypt.Language.Editing/VisualCrypt.Language.Editing.csproj
+++ b/Common/ApplicationLogic/VisualCrypt.Language.Editing/VisualCrypt.Language.Editing.csproj
@@ -5,18 +5,17 @@
     <MinimumVisualStudioVersion>10.0</MinimumVisualStudioVersion>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{CC794610-54C9-4F5F-AC82-005260FBB8DE}</ProjectGuid>
+    <ProjectGuid>{A39A7CBD-6C20-4A02-A3B1-597561AC2B10}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>VisualCrypt.Language</RootNamespace>
-    <AssemblyName>VisualCrypt.Language</AssemblyName>
+    <RootNamespace>VisualCrypt.Language.Editing</RootNamespace>
+    <AssemblyName>VisualCrypt.Language.Editing</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TargetFrameworkProfile>Profile111</TargetFrameworkProfile>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <SupportedCultures>
-    </SupportedCultures>
+    <SupportedCultures>de;fr;it;ru</SupportedCultures>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -105,24 +104,94 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Strings\Generated_de.cs" />
-    <Compile Include="Strings\Generated_en.cs" />
-    <Compile Include="Strings\Generated_fr.cs" />
-    <Compile Include="Strings\Generated_it.cs" />
-    <Compile Include="Strings\Generated_ru.cs" />
-    <Compile Include="Strings\IGeneratedResource.cs" />
-    <Compile Include="Strings\Info.cs" />
-    <Compile Include="Strings\NoDotsExtension.cs" />
-    <Compile Include="Strings\ResourceWrapper.cs" />
-    <Compile Include="Strings\ResourceWrapper.generated.cs" />
-    <Compile Include="Strings\ResourceWrapper.generated.template.cs" />
+    <Compile Include="Strings\Resources.de.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.de.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Strings\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Strings\Resources.fr.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.fr.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Strings\Resources.it.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.it.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Strings\Resources.ru.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.ru.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <XliffResource Include="Strings\Resources.de.xlf">
+      <Generator>XliffResxGenerator</Generator>
+      <LastGenOutput>Resources.de.resx</LastGenOutput>
+    </XliffResource>
+    <XliffResource Include="Strings\Resources.fr.xlf">
+      <Generator>XliffResxGenerator</Generator>
+      <LastGenOutput>Resources.fr.resx</LastGenOutput>
+    </XliffResource>
+    <XliffResource Include="Strings\Resources.it.xlf">
+      <Generator>XliffResxGenerator</Generator>
+      <LastGenOutput>Resources.it.resx</LastGenOutput>
+    </XliffResource>
+    <XliffResource Include="Strings\Resources.ru.xlf">
+      <Generator>XliffResxGenerator</Generator>
+      <LastGenOutput>Resources.ru.resx</LastGenOutput>
+    </XliffResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Strings\Resources.de.resx">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.de.xlf</DependentUpon>
+      <culture>de</culture>
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.de.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Strings\Resources.fr.resx">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.fr.xlf</DependentUpon>
+      <culture>fr</culture>
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.fr.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Strings\Resources.it.resx">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.it.xlf</DependentUpon>
+      <culture>it</culture>
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.it.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Strings\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Strings\Resources.ru.resx">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.ru.xlf</DependentUpon>
+      <culture>ru</culture>
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.ru.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\Multilingual App Toolkit\Microsoft.Multilingual.ResxResources.targets" Label="MultilingualAppToolkit" />
   <PropertyGroup>
-    <PreBuildEvent>$(SolutionDir)\misc\VisualCrypt.BuildTools\bin\$(ConfigurationName)\VisualCrypt.BuildTools.exe -generateresourcewrapper $(ProjectDir)Strings
-$(SolutionDir)\misc\VisualCrypt.BuildTools\bin\$(ConfigurationName)\VisualCrypt.BuildTools.exe -generateresourceclasses $(ProjectDir)Strings
-</PreBuildEvent>
+    <PreBuildEvent>
+    </PreBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
