--- a/Android/VisualCrypt/VisualCrypt/Properties/AndroidManifest.xml
+++ b/Android/VisualCrypt/VisualCrypt/Properties/AndroidManifest.xml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.visualcryptag.visualcrypt">
 	<uses-sdk android:minSdkVersion="16" android:targetSdkVersion="23" />
-	<application android:allowBackup="true" android:icon="@mipmap/icon" android:label="@string/app_name" android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+	<application android:allowBackup="true" android:icon="@mipmap/icon" android:label="@string/app_name" android:theme="@style/MyTheme">
 	
 	</application>
+  <!--Theme.AppCompat.Light.NoActionBar-->
 </manifest>
